Concluído porte para Python 3
Sinalizada conformidade com ER 2.21.08.

Entre a ER 2.19.07 e esta, não houve nenhuma alteração que impacte
diretamente os projetos relacionados. A única ressalva é sobre uma
alteração no campo IE (C12) prevista para o layout 0.08 do CF-e,
documentado no incidente #8.

Adicionada documentação própria. Embora a documentação principal
seja a do projeto satcfe, uma documentação própria facilita o
acesso às funções comuns utilizadas pelos projetos relacionados.

Adicionado CI via Travis-CI e organização dos emblemas no README.

Incluídas indicações de versão para Python 2.7 e 3.6.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 __pycache__/
-
-.tox/
+.cache/
 .pytest_cache/
+.tox/
 
 /build/
 /dist/
-/*.egg-info/
+/satcomum.egg-info/
 /*.egg/
 /*.eggs/
+/docs/_build/
+
+.coverage
 
 *.pyc
 *.pyo
