Simplificação da estrutura do projeto
Embora as alterações não impactem o código cliente desta biblioteca,
foi adicionada a dependência da biblioteca "future", e também foram
feitas várias mudanças importantes na estrutura do projeto:

* Dependências não possuem versões fixadas (soft dependencies);
* Diversos ajustes no estilo de código, conforme PEP8;
* Testes:
    - Módulos de testes foram retirados do pacote satcomum;
    - Simplificados os parâmetros de testes via tox;
    - Script Travis-CI simplificado;

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,20 @@
 __pycache__/
 .cache/
-.pytest_cache/
 .tox/
+.idea/
+.env/
+.env_satcomum/
+.pytest_cache/
 
 /build/
 /dist/
-/satcomum.egg-info/
-/*.egg/
+/*.egg-info/
 /*.eggs/
 /docs/_build/
-
-.coverage
 
 *.pyc
 *.pyo
 *.pyd
+*.egg
+
 *.sublime-workspace
