--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
 [tox]
-envlist = py27, py36
+skip_missing_interpreters = true
+envlist =
+    py27
+    py36
+    py37
+    py38
 
 [testenv]
-commands =
-    python setup.py test
-
+changedir = tests
+deps = pytest
+commands = pytest --basetemp="{envtmpdir}" {posargs}
